--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -4,12 +4,11 @@
 <!--[if IE 9 ]><html class="no-js ie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-
+	<meta charset="UTF-8">
     {% load staticfiles %}
 
    <!--- Basic Page Needs
    ================================================== -->
-   <meta charset="utf-8">
 	<title>Moviebook</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
@@ -17,7 +16,6 @@
    <!-- Mobile Specific Metas
    ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 
 	<!-- CSS
     ================================================== -->
