use s3 storage for static files

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -30,14 +30,14 @@
    <!-- Script
    =================================================== -->
 	<!--<script src="js/modernizr.js"></script>-->
-    <script src="{% static 'js/modernizr.js' %}"></script>
-    <script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
-    <script src="{% static 'js/jquery-migrate-1.2.1.min.js' %}"></script>
-    <script src="{% static 'js/jquery.flexslider.js' %}"></script>
-    <script src="{% static 'js/jquery.fittext.js' %}"></script>
-    <script src="{% static 'js/backstretch.js' %}"></script>
-    <script src="{% static 'js/waypoints.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>
+    <script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/jquery.fittext.js"></script>
+    <script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/backstretch.js"></script>
+	<script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/jquery.flexslider.js"></script>
+    <script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/jquery-migrate-1.2.1.min.js"></script>
+    <script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/main.js"></script>
+    <script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/waypoints.js"></script>
+    <script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/modernizr.js"></script>
+    <script src="https://s3.ca-central-1.amazonaws.com/moviebook/static/jquery-1.10.2.min.js"></script>
 
    <!-- Favicons
 	=================================================== -->
